# notes_pdf_samplers_MDGFRD

./: .gitignore  CMakeLists.txt  draw.h  generate_data.c  generate_figures.sh  greensFunct.h  make_data_convergenceNewton.h  make_data_convexPall.h  make_data_fig1.h  make_data_fig2.h  make_data_fig3.h  make_data_fig4.h  make_data_fig5.h  make_data_fig6.h  make_data_fig7.h  make_data_funcReconstr.h  parameters.h
figures/: plot_samplers_comparisonPfree.py  plot_samplers_convergenceNewton.py  plot_samplers_convergenceSeries.py  plot_samplers_convexP.py  plot_samplers_convexPall.py  plot_samplers_convexS.py  plot_samplers_fig1.py  plot_samplers_fig2.py  plot_samplers_fig3.py  plot_samplers_fig4.py  plot_samplers_fig5.py  plot_samplers_fig6.py  plot_samplers_fig7.py  plot_samplers_functReconstr.py
src/: generate_data.c  greensFunct.h  make_data_comparisonPfree.h  make_data_convergenceNewton.h  make_data_convergenceSeries.h  make_data_convexP.h  make_data_convexPall.h  make_data_convexS.h  make_data_convexSall.h  make_data_funcReconstr.h  plot_samplers_comparisonPfree.py  plot_samplers_convergenceNewton.py  plot_samplers_convergenceSeries.py  plot_samplers_convexP.py  plot_samplers_convexS.py  plot_samplers_functReconstr.py  style.mplstyle
src/results/: samplers_comparisonPfree.txt  samplers_convergenceNewton_pt1.txt  samplers_convergenceNewton_pt10.txt  samplers_convergenceNewton_pt100.txt  samplers_convergenceNewton_q.txt  samplers_convergenceSeries_pP_t1.txt  samplers_convergenceSeries_pP_t10.txt  samplers_convergenceSeries_pP_t100.txt  samplers_convergenceSeries_qS.txt  samplers_convexP_b10all.txt  samplers_convexP_b1all.txt  samplers_convexP_b1t1.txt  samplers_convexP_b1t100.txt  samplers_convexS_all.txt  samplers_convexS_b1.txt  samplers_convexS_b2.txt  samplers_convexS_b3.txt  samplers_funcReconstr_pt1.txt  samplers_funcReconstr_pt10.txt  (+2 more)
